# Metagenomic-DeepFRI

./: .dockerignore  .gitignore  .gitlint  .gitmodules  .pre-commit-config.yaml  .style.yapf  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONFIG.py  CONTRIBUTING.md  DB_prepare.py  Dockerfile  LICENSE  README.md  create_foldseek_database.py  create_mmseqs_database.py  datafile_test.py  deepfri.yaml  deepfritest.py  docker_communication.py  environment.yml  main.py  main_loop.py  main_parallel.py  main_pipeline.py  metagenomic_deepfri.py  metagenomic_deepfri_pipeline.py  mmcif_parser.py  pdb_parser.py  post_setup.py  pyproject.toml  pytest.ini  read_cmap.py  requirements.txt  resume_tasks.py  run_foldseek_search.py  run_mmseqs_search.py  seq_database.py  setup.cfg  (+6 more)
.github/: CODEOWNERS
.github/workflows/: autoyapf.yml  build_docs.yml  release.yml  requirements.txt
CONFIG/: FOLDER_STRUCTURE.py  README.md  RUNTIME_PARAMETERS.py  example-project_config.json  get_config_dict.py
CPP_lib/: AtomFileIO.cpp  CMakeLists.txt  PythonUtils.cpp  README.md  bit_set.hpp  library.cpp  load_contact_maps.h  python_utils.h
DownloadDB/: pdb_dataset_download.py
benchmark/: README.md  benchmaprk_results.ipynb  benchmark_results.tsv  benchmark_results_gpu.tsv  time_benchmark_cpu.py  time_benchmark_gpu.py
config/: README.md  default_folder_structure.json
docs/: cli.rst  conf.py  index.rst  install.rst  make.bat  requirements.txt  results.rst
docs/_images/: mdeepfri-design.drawio
docs/_static/bibtex/: references.bib
docs/_static/css/: main.css
docs/_static/json/: switcher.json
docs/api/: alignment.rst  bio_utils.rst  database.rst  index.rst  mmseqs.rst  pipeline.rst  predict.rst  utils.rst
docs/examples/: index.rst
docs/source/: conf.py  contributing.rst  contribution.md  deepfri.rst  functions.rst  index.rst  installation.md  output.md  references.rst  usage.md
docs/source/_static/: references.bib
docs/source/_static/images/: deepfri-design.drawio  mdeepfri-design.drawio
docs/source/examples/: ecoli.rst  index.rst
mDeepFRI/: __init__.py  alignment.py  alignment.pyx  alignment_utils.pyx  atoms_io.pyx  bio_utils.py  cli.py  contact_map.py  contact_map_utils.pyi  contact_map_utils.pyx  database.py  go_propagation.py  mmseqs.py  parsers.pyx  pdb.py  pipeline.py  predict.py  predict.pyi  predict.pyx  utils.py
mDeepFRI/CPP_lib/: atoms_file_io.cpp  atoms_file_io.h  atoms_io.pyx  library_definition.cpp  load_contact_maps.cpp  load_contact_maps.h  parsers.pyx  python_utils.h
mDeepFRI/assets/: go2cog_USECLO_ALL.tsv  highquality_clust30_error_ids.pkl
mDeepFRI/config/: names.py
mDeepFRI/structure_files/: parse_structure_file.py  parsers.py
mDeepFRI/tests/: __init__.py  test_alignment.py  test_bio_utils.py  test_cli.py  test_conctact_map.py  test_contact_map_utils.py  test_install.py  test_mmseqs.py  test_pdb.py  test_pipeline_regression.py  test_predict.py  test_utils.py
mDeepFRI/tests/data/: small_query.faa
mDeepFRI/utils/: bio_utils.py  fasta_file_io.py  mmseqs.py  search_alignments.py
meta_deepFRI/: metagenomic_deepfri.py  predict.py
meta_deepFRI/CPP_lib/: CMakeLists.txt  README.md  __init__.py  atoms_file_io.h  library_definition.cpp  load_contact_maps.h  python_utils.h
meta_deepFRI/config/: __init__.py  folder_structure.py  job_config.py  names.py  runtime_config.py
meta_deepFRI/structure_files/: README.md  __init__.py  parse_pdb.py  parse_structure_file.py  parsers.py
meta_deepFRI/utils/: __init__.py  bio_utils.py  elapsed_time_logger.py  encode_sequence_ids.py  fasta_file_io.py  mmseqs.py  pipeline_utils.py  run_mmseqs_search.py  search_alignments.py  seq_file_loader.py  utils.py
notebooks/: functional_vector_analysis.ipynb  halogenases.ipynb
scripts/: README.md  build_database.py  create_folder_structure.py  create_project.py  delete_project.py  main_pipeline.py  resume_tasks.py  update_target_mmseqs_database.py
scripts/default_config/: data_root_path.json  runtime_config.json
structure_files/: __init__.py  parse_structure_file.py
structure_files_parsers/: README.md
tests/: test_alignment.py  test_bio_utils.py  test_cli.py  test_cpp_lib.py  test_deepfri.py  test_install.py  test_main_pipeline.py  test_parsers.py  test_pipeline_elements.py  test_structure_file_parsers.py  test_structure_parsers.py  test_utils.py
tests/data/: 1S3P-A.bin.cmap.npy  1S3P-A.bin.cmap.pkl  example_db.faa  query.faa  small_query.faa
tmp_old/: bio_magic.py  deep_fri_core.py  pdb_dataset_download.py  read_cmap.py
utils/: __init__.py  bio_config.py  bio_utils.py  elapsed_time_handler.py  elapsed_time_logger.py  encode_sequence_ids.py  faa_file_io.py  mmseqs.py  mmseqs_utils.py  pipeline_utils.py  run_mmseqs_search.py  search_alignments.py  seq_file_loader.py  utils.py
utils/structure_files_parsers/: parse_mmcif.py
weight_convert/: README.md  convert_models2onnx.py  onnx_test.csv  performance_plot.py  predictor.py  random_100_protein_prediction.ipynb
