[project]
name = "mDeepFRI"
version = "1.1.10"
description = "Pipeline for searching and aligning contact maps for proteins, and function prediction with DeepFRI."
readme = { file = "README.md", content-type = "text/markdown" }
license = "GPL-3.0-or-later"
license-files = [
    "LICENSE"
]
authors = [
    { name = "Valentyn Bezshapkin", email = "valentyn.bezshapkin@micro.biol.ethz.ch" }
]
requires-python = ">=3.11,<3.13"
keywords = ["bioinformatics", "protein", "function", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    "click ~=8.0",
    "numpy ~=2.3",
    "biotite >=1.3",
    "pysam >=0.18",
    "pyopal ~=0.7",
    "foldcomp",
    "tqdm",
    "onnxruntime-gpu; platform_system != 'Darwin' and platform_machine != 'aarch64' and platform_machine != 'arm64'",
    "onnxruntime; platform_system == 'Darwin' or platform_machine == 'aarch64' or platform_machine == 'arm64'"
]

[project.urls]
"Homepage" = "https://github.com/bioinf-MCB/Metagenomic-DeepFRI"
"Bug Tracker" = "https://github.com/bioinf-MCB/Metagenomic-DeepFRI/issues"
"Changelog" = "https://github.com/bioinf-MCB/Metagenomic-DeepFRI/blob/main/CHANGELOG.md"
"Builds" = "https://github.com/bioinf-MCB/Metagenomic-DeepFRI/actions"
"PyPI" = "https://pypi.org/project/mdeepfri"

[project.optional-dependencies]
dev = [
    "pre-commit"
]

[project.scripts]
mDeepFRI = "mDeepFRI.cli:main"

[build-system]
requires = [
    "setuptools >= 80",
    "cython ~=3.0",
    "archspec ~=0.2.0",
    "requests",
    "numpy"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["mDeepFRI", "mDeepFRI.*"]

[tool.setuptools.package-data]
"mDeepFRI" = ["assets/*.pkl"]

[tool.ruff]
line-length = 120

[tool.yapf]
based_on_style = "yapf"
spaces_before_comment = 4
split_before_logical_operator = true
column_limit = 120
parallel = true
indent_width = 4
in_place = true
exclude = [
    "tests/",
    "docs/",
    "*.faa",
    "*.pdb"
    ]

[tool.mypy]
exclude = [
    "tests/",
    "docs/"
    ]
