[metadata]
name = mDeepFRI
version = attr: mDeepFRI.__version__
author = Valentyn Bezshapkin
author_email = valentyn.bezshapkin@micro.biol.ethz.ch
description_file=README.md
license_files=LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bioinf-MCB/Metagenomic-DeepFRI
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = false
packages = mDeepFRI
python_requires = >=3.6
setup_requires =
    setuptools >=46.4
    cython ~=3.0

[options.entry_points]
console_scripts =
    mDeepFRI = mDeepFRI.cli:main
