[metadata]
name = mDeepFRI
version = attr: mDeepFRI.__version__
author = Valentyn Bezshapkin
author_email = valentyn.bezshapkin@micro.biol.ethz.ch
url = https://github.com/bioinf-MCB/Metagenomic-DeepFRI
description = Pipeline for searching and aligning contact maps for proteins, and function prediction with DeepFRI.
description_file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
platform = any
keywords = bioinformatics, protein, function, deep-learning
license_files = LICENSE.md
classifiers =
    Programming Language :: Cython
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: BSD License
    Operating System :: MacOS
    Operating System :: Linux
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
project_urls =
    Bug Tracker = https://github.com/bioinf-mcb/Metagenomic-DeepFRI/issues
    Changelog = https://github.com/bioinf-mcb/Metagenomic-DeepFRI/blob/main/CHANGELOG.md
    Builds = https://github.com/bioinf-mcb/Metagenomic-DeepFRI/actions
    PyPI = https://pypi.org/project/mdeepfri

[options]
zip_safe = false
packages = mDeepFRI
python_requires = >=3.9, <3.12
setup_requires =
    setuptools >=46.0
    cython ~=3.0
    archspec ~=0.2.0
    requests
    numpy
install_requires =
    click ~=8.0
    numpy ~=1.21
    biotite
    pysam >=0.18
    pyopal ~=0.5
    foldcomp
    tqdm
    onnxruntime-gpu

[options.entry_points]
console_scripts =
    mDeepFRI = mDeepFRI.cli:main

[options.extras_require]
dev =
    pre-commit
